FIX: Dropping on IOS
Opens a new tab when div is dropped.

--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ h2 {
     font-weight: 600;
     cursor: pointer;
     display: none;
+    margin-left: 35%;
 }
 
 .space {
